force-app/main/default/objects/Case/fields/AI_Model_Used__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_Used__c</fullName>
    <label>AI Model Used</label>
    <type>Text</type>
    <length>100</length>
    <description>Stores the name of the LLM model that generated the AI summary (e.g. gpt-4o-mini, gpt-4o). Used for cost tracking, audit, and model version management. Populated automatically by the middleware response.</description>
</CustomField>