force-app/main/default/objects/Case/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <label>AI Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>AI-generated summary of the Case. Auto-populated by the FastAPI middleware via OpenAI. Contains 3 structured bullet points: PROBLEM, SENTIMENT, and ACTION. Do not edit manually — any manual change will be overwritten on next AI refresh.</description>
</CustomField>