force-app/main/default/objects/Case/fields/AI_Summary_Generated_At__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary_Generated_At__c</fullName>
    <label>AI Summary Generated At</label>
    <type>DateTime</type>
    <description>Timestamp (UTC) when the AI summary was last generated. Used for auditing, detecting stale summaries, and SLA reporting. Populated automatically by the middleware response field generated_at.</description>
</CustomField>